# software-obj-renderer

./: .gitignore  CMakeLists.txt  README.md
include/: camera.h  canvas.h  graph.h  gui.h  inputmanger.h  linear.h  model.h  render.h  timer.h
src/: gui.cpp  main.cpp
